sna/dri2: Refine ring selection with multiple active rings

The preference given multiple rings is to the previous writer, or if
none, to the render ring if active.

References: https://bugs.freedesktop.org/show_bug.cgi?id=90671
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>